# dna_at_home

./: README
analysis/: find_repeated_sequences.cxx  remove_repeated_sequences.cxx
boinc_daemons/: CMakeLists.txt  dna_assimilation_policy.cxx  dna_validation_policy.cxx  dna_work_generator.cxx
boinc_daemons/data/: mtub_NC_000962_intergenic.2.43X_sites.txt  mtub_spacing.txt
boinc_daemons/deprecated/: GibbsStartSampler.java  GibbsTestSampler.java  test_sampler.sh
data/: crp.16.pr  crp.16.sequences.txt
dna_icons/: TestColorReplace.java
evo_motifs/: CMakeLists.txt  brute_force.cpp  motif_fitness.cpp
gibbs_cpp/: arguments.hpp  checkpoint.cpp  checkpoint.hpp  gibbs_main.cpp  motif_models.cpp  motif_models.hpp  phylogeny.c  phylogeny.cpp  phylogeny.h  phylogeny.hpp  print_sampled_sites.cpp  sampling.cpp  sampling.hpp  sequences.cpp  sequences.hpp  shifting.cpp  shifting.hpp  structs.hpp  util.cpp  util.hpp
gibbs_new/: boinc_compile_linux_x86_64.sh  boinc_compile_osx_x86_64.sh  checkpoint.c  checkpoint.h  gibbs_main.c  motif_models.c  motif_models.h  run_gibbs_from_sites.sh  run_gibbs_palindromic.sh  run_gibbs_rev_comp.sh  run_gibbs_revcomp.sh  sampling.c  sampling.h  sequences.c  sequences.h  shifting.c  shifting.h  structs.h
gibbs_original/: Gibbs.c  Gibbs.h  Gibbs_NON_GUI.c  Gibbs_NON_GUI.h  Makefile  Makefile.am  Makefile.in  README  bayes.c  bayes.h  blosum.h  calcstats.c  calcstats.h  centroid.c  centroid.h  column.c  column.h  common.c  common.h  configure  configure.in  counts.c  counts.h  digammal.c  digammal.h  exchange.c  exchange.h  expectmax.c  expectmax.h  fels.c  fels.h  footprint.c  footprint.h  fragadj.c  fragadj.h  fragment.c  fragment.h  freqbkgnd.c  freqbkgnd.h  gibbsmpi.c  (+65 more)
gibbs_original/original_save_bin/: mtub_NC_000962_intergenic.crp16_pc5_ms.1.out  rungibbs.sh  rungibbs_large2.sh
plots/: clean_files.php  generate_plots.php  plot_distances.py  plot_distances2.py  slug_hg19_1000fa_1motifs_100.out  slug_hg19_1000fa_1motifs_100.out-e  slug_hg19_1000fa_2motifs_100.out  slug_hg19_1000fa_2motifs_100.out-e  slug_hg19_1000fa_3motifs_100.out  slug_hg19_1000fa_3motifs_100.out-e  slug_hg19_100fa_1motifs_100.out  slug_hg19_100fa_1motifs_100.out-e  slug_hg19_100fa_2motifs_100.out  slug_hg19_100fa_2motifs_100.out-e  slug_hg19_100fa_3motifs_100.out  slug_hg19_100fa_3motifs_100.out-e  slug_hg19_10fa_1motifs_100.out  slug_hg19_10fa_1motifs_100.out-e  slug_hg19_10fa_2motifs_100.out  slug_hg19_10fa_2motifs_100.out-e  slug_hg19_10fa_3motifs_100.out  slug_hg19_10fa_3motifs_100.out-e  snail_hg19_1000fa_1motifs_100.out  snail_hg19_1000fa_1motifs_100.out-e  snail_hg19_1000fa_2motifs_100.out  snail_hg19_1000fa_2motifs_100.out-e  snail_hg19_1000fa_3motifs_100.out  snail_hg19_1000fa_3motifs_100.out-e  snail_hg19_100fa_1motifs_100.out  snail_hg19_100fa_1motifs_100.out-e  snail_hg19_100fa_2motifs_100.out  snail_hg19_100fa_2motifs_100.out-e  snail_hg19_100fa_3motifs_100.out  snail_hg19_100fa_3motifs_100.out-e  snail_hg19_10fa_1motifs_100.out  snail_hg19_10fa_1motifs_100.out-e  snail_hg19_10fa_2motifs_100.out  snail_hg19_10fa_2motifs_100.out-e  snail_hg19_10fa_3motifs_100.out  snail_hg19_10fa_3motifs_100.out-e
scripts/: combineFasta.py  createRandomStartPoints.py  find_walks.py  gibbs_to_jaspar.py  heatmap_motifs.py  inter_walk_comparison.py  inter_walk_print.pbs  inter_walk_print.py  inter_walk_print_sort.py  intra_walk_comparison.py  ks_convergence_intrawalk.pbs  ks_convergence_intrawalk.py  match_genes.py  post_print.py  run.pbs  run_interwalks.sh  run_ks.sh  run_print.py  run_script.pbs  sum_range.py  sum_walk.py
server/: CMakeLists.txt  GibbsValidator.java  create_workunits.sh  dna_assimilation_policy.cxx  dna_validation_policy.cxx  dna_work_generator.cxx  run_validator.sh
server/data/: 2_rc_models_6_6_sites_1.txt
server/deprecated/: GibbsValidationPolicy.java  compile.sh
tests/: compile.sh  error_sites_1.txt  error_sites_2.txt  generate_test_sequences  generate_test_sequences.c  run_test.sh  test_sites_1.txt
webpage/: index.php  overview.php  progress.php  update_symlinks.php
webpage/js/: overview.js  progress.js
webpage/templates/: dna_info.html  sampler_overview.html  walk_overview.html
